added options for datalist in Development-branch
added options for datalist in Development-branch

--- a/login flow using Bootstrap and jQuery/testimganimation.html
+++ b/login flow using Bootstrap and jQuery/testimganimation.html
@@ -19,13 +19,15 @@
 				<option  class= "para" value="Jio">Jio</option>
 				<option  class= "para" value="Airtel">Airtel</option>
 				<option  class= "para" value="Vodafone">Vodafone</option>
+				<option  class= "para" value="Idea">Idea</option>
+				<option  class= "para" value="Reliance">Reliance</option>
 			</datalist>
 			<input type="submit" name="submit" class="inputsubmit">
 		</div>
     </header>
 	<section class="flex">
 		<div class="container">
-			<img src="G:\CSS3\rose.jpeg" class="image-container">
+			<img src="./rose-image.jpeg" class="image-container">
 			<div class="overlay">
 				<div class=text-container>Hi Rahul,</div>
 			</div>
